src/objects/QPMS__Course_Sessions__c.object
<CustomObject>
    <description>This object is used to store course session related information</description>
    <fields>
        <fullName>QPMS__Advance_Refresher_Date__c</fullName>
        <formula>QPMS__Start_Date__c  -  QPMS__Refresher_Advance_Notice_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Advance Refresher Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Allowed_Days__c</fullName>
        <description>Used to store allow days in approval orocess</description>
        <label>Allowed Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Group__c</fullName>
        <description>this field is used to store approval group related value</description>
        <label>Approval Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Process_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to completed the approval process in Course session</description>
        <label>Approval Process Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Process__c</fullName>
        <description>This field stores the name of approval process currently this record hold</description>
        <label>Approval Process</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Course Session Active</fullName>
                </value>
                <value>
                    <fullName>Course Session Deactivate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to store the Approval required for Course Session</description>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Status__c</fullName>
        <description>To store the status of record in approval process</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>this filed is used to store second approval in approval process</description>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Course_Session1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>this field is used to store third user in papproval process</description>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Course_Session2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>this field is used to store fourth user in approval process</description>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Course_Session3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Store first user in approval process</description>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Course_Session</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Assessment_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Assessment required from course</description>
        <label>Assessment Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Attendance__c</fullName>
        <description>To save the user attendance</description>
        <label>Attendance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Present</fullName>
                </value>
                <value>
                    <fullName>Absent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__AttendenceAll__c</fullName>
        <description>AttendenceAll</description>
        <label>AttendenceAll</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Present</fullName>
                </value>
                <value>
                    <fullName>Absent</fullName>
                </value>
                <value>
                    <fullName>No Status</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Auto_Create_Session__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Create Session</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Completed_Date__c</fullName>
        <description>Storing completed date</description>
        <inlineHelpText>Storing completed date</inlineHelpText>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Completion_Period_Days__c</fullName>
        <description>this filed Completion Period (Days)</description>
        <label>Completion Period (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__ContentVersionId__c</fullName>
        <description>To save ContentVersionId</description>
        <label>ContentVersionId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__CourseType__c</fullName>
        <label>Course Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Instructor Led</fullName>
                </value>
                <value>
                    <fullName>Document</fullName>
                </value>
                <value>
                    <fullName>On the Job(OTJ)</fullName>
                    <isActive>false</isActive>
                    <label>On the Job(OTJ)</label>
                </value>
                <value>
                    <fullName>Self Learn</fullName>
                    <isActive>false</isActive>
                    <label>Self Learn</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Course_Description__c</fullName>
        <description>This field is used to store the course description</description>
        <label>Course Description</label>
        <length>8000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Course_Not_Related_To_Job_Function__c</fullName>
        <formula>QPMS__Course__r.QPMS__Course_Not_Related_To_Job_Function__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Not Related To Job Function</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Course_Number__c</fullName>
        <formula>QPMS__Course__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Course_Owner__c</fullName>
        <formula>IF( NOT(ISBLANK( QPMS__Course__c )) , QPMS__Course__r.Owner:User.FirstName+&apos; &apos;+ QPMS__Course__r.Owner:User.LastName ,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Course_Session_Status__c</fullName>
        <label>Course Session Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Course_Title__c</fullName>
        <formula>QPMS__Course__r.QPMS__Course_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>this is lookup to course</description>
        <label>Course Title</label>
        <referenceTo>QPMS__Course__c</referenceTo>
        <relationshipLabel>Course Session</relationshipLabel>
        <relationshipName>Course_Session</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__CurrentApprovalSequenceNumber__c</fullName>
        <label>CurrentApprovalSequenceNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Document_Profile__c</fullName>
        <formula>QPMS__Course__r.QPMS__Document_Profile__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Document_Status__c</fullName>
        <formula>TEXT(QPMS__Course__r.QPMS__Document_Profile__r.QPMS__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Document__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document</label>
        <referenceTo>QPMS__Document_Profile__c</referenceTo>
        <relationshipLabel>Course Session</relationshipLabel>
        <relationshipName>Course_Session</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Duration__c</fullName>
        <description>Stores duration value</description>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__End_Date__c</fullName>
        <description>This field stores the end date of session</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__EnrollAll__c</fullName>
        <defaultValue>false</defaultValue>
        <description>EnrollAll for all</description>
        <label>EnrollAll</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Enrolled_Users__c</fullName>
        <label>Enrolled Users</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Enrolled_count__c</fullName>
        <description>this field is used to store enrolled count</description>
        <label>Enrolled count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Enrollment_Max__c</fullName>
        <description>this field is used to store Enrollment Max</description>
        <label>Enrollment Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Trainer_s__c</fullName>
        <label>External Trainer(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Followers__c</fullName>
        <label>Followers</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Initial_Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To save initial submitter value in approval process</description>
        <label>Initial Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Course_SessionMvBB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Initiating_Site_Name__c</fullName>
        <formula>QPMS__Initiating_Site__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initiating Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Initiating_Site_Security__c</fullName>
        <description>Initiating Site Security for course session</description>
        <label>Initiating Site Security</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Initiating_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Initiating Site for course session</description>
        <label>Initiating Site</label>
        <referenceTo>QPMS__Manufacturing_Site__c</referenceTo>
        <relationshipLabel>Course Session</relationshipLabel>
        <relationshipName>Course_Session</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Internal_Trainer__c</fullName>
        <description>To store internal trainers</description>
        <label>Internal Trainer(s)</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__IsRefresher__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To differentiate junction record with refresher</description>
        <label>IsRefresher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Is_Refresher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Refresher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Note_To_Approver__c</fullName>
        <description>To save approvers note</description>
        <label>Note To Approver</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Owner__c</fullName>
        <formula>CreatedBy.FirstName + &apos; &apos; + CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__PersonProfile__c</fullName>
        <description>To save  person profile  ids</description>
        <label>PersonProfile</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Purpose__c</fullName>
        <description>This is used to store purpose of th ecourse</description>
        <label>Purpose</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Reason__c</fullName>
        <description>To save status change reason</description>
        <label>Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Refresher_Advance_Notice_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <description>this filed stores Refresher Advance Notice(Days)</description>
        <label>Refresher Advance Notice(Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Refresher_Period_Days__c</fullName>
        <description>This field is used to store Refresher Period (Days) in course object</description>
        <label>Refresher Period (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Refresher_date_for_Instructor_led__c</fullName>
        <formula>QPMS__Completed_Date__c + QPMS__Refresher_Period_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Refresher date for Instructor led</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Refresher_period_notification__c</fullName>
        <formula>QPMS__Completed_Date__c +   QPMS__Course__r.QPMS__Refresher_Period_Days__c</formula>
        <label>Refresher period notification</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Sequence__c</fullName>
        <label>Sequence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Show_All_Users__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show All Users for course session</description>
        <label>Show All Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Signed_Off_Details__c</fullName>
        <label>Signed Off Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Start_Date__c</fullName>
        <description>this will store the start date of session</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Refresh</fullName>
                </value>
                <value>
                    <fullName>Enrolled</fullName>
                </value>
                <value>
                    <fullName>Late</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>InReview</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>In Session</fullName>
                </value>
                <value>
                    <fullName>Open Enrollment</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Supported_Regulations__c</fullName>
        <description>this field is used to store Supported Regulations</description>
        <label>Supported Regulations</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__isLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to check that record is locked or not( in approval process )</description>
        <label>isLocked</label>
        <type>Checkbox</type>
    </fields>
    <label>Course Session</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <columns>NAME</columns>
        <columns>QPMS__CourseType__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>QPMS__Status__c</columns>
        <columns>QPMS__End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CS-{00000}</displayFormat>
        <label>Course Session Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Session</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>